Fix breadcrumb design on small viewport

--- a/src/utils/Breadcrumb.css
+++ b/src/utils/Breadcrumb.css
@@ -4,8 +4,9 @@
   margin: 0;
   display: flex;
   align-items: baseline;
+  flex-wrap: wrap;
 
-  & li:not(:first-child)::before {
+  & li:not(:last-child)::after {
     content: "/";
     color: var(--secondary-text-color);
     padding: 0 0.5em;
